finalized search engine

--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
       <h1>ARSUS ACTIVEGYMHUB</h1>
       <div>
         <input
-          type="text"
-          id="searchLocation"
-          placeholder="Search by location"
-        />
+          type="text" id="searchLocation"  placeholder="Search by location" />
+          <input type="text" id="searchName" placeholder="Search by name" />
         <button onclick="filterGyms()">Search</button>
         <button onclick="showRegister()">Join as Gym Owner</button>
       </div>
