--- a/index.html
+++ b/index.html
@@ -107,6 +107,45 @@
       <div id="adminGymList"></div>
     </div>
 
+<footer>
+  <div class="footer-container">
+    <div class="footer-section">
+      <h3>ARSUS ACTIVEGYMHUB</h3>
+      <p>Your trusted gym finder platform.</p>
+    </div>
+
+    <div class="footer-section">
+      <h4>Quick Links</h4>
+      <ul>
+        <li><a href="#" onclick="goHome()">Home</a></li>
+        <li><a href="#" onclick="showRegister()">Join as Gym Owner</a></li>
+        <li><a href="#" onclick="showAdminLogin()">Admin Login</a></li>
+        <li><a href="#" onclick="goToPricing()">Pricing</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-section">
+      <h4>Contact Us</h4>
+      <p>Email:activeHubgym.com</p>
+      <p>Phone: +254 703 114 863</p>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    <p>&copy; 2026 ARSUS ACTIVEGYMHUB All rights reserved.</p>
+  </div>
+</footer>
+
+
+
+
+
+
+
+
+
+
+
     <script src="./JS/app.js"></script>
   </body>
 </html>
