--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
 Join our website and make your gym available to many, with ursus we bring the best of gym to the general public.</p>
 </div>
 
-<div>
-  <img  src="images/lady1.jpg"/>
+<div class="image">
+
 </div>
 
 
