--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <header>
+      <img src="/images/logoo.png" width="10%"/>
       <h1>ARSUS ACTIVEGYMHUB</h1>
       <div>
         <input type="text" id="searchName" placeholder="Search by name" />
